tests/ui/infinite_loop.stderr
error: Variable in the condition are not mutated in the loop body. This either leads to an infinite or to a never running loop.
  --> $DIR/infinite_loop.rs:14:11
   |
14 |     while y < 10 {
   |           ^^^^^^
   |
   = note: #[deny(while_immutable_condition)] on by default

error: Variable in the condition are not mutated in the loop body. This either leads to an infinite or to a never running loop.
  --> $DIR/infinite_loop.rs:19:11
   |
19 |     while y < 10 && x < 3 {
   |           ^^^^^^^^^^^^^^^

error: Variable in the condition are not mutated in the loop body. This either leads to an infinite or to a never running loop.
  --> $DIR/infinite_loop.rs:26:11
   |
26 |     while !cond {
   |           ^^^^^

error: Variable in the condition are not mutated in the loop body. This either leads to an infinite or to a never running loop.
  --> $DIR/infinite_loop.rs:70:11
   |
70 |     while i < 3 {
   |           ^^^^^

error: Variable in the condition are not mutated in the loop body. This either leads to an infinite or to a never running loop.
  --> $DIR/infinite_loop.rs:75:11
   |
75 |     while i < 3 && j > 0 {
   |           ^^^^^^^^^^^^^^

error: Variable in the condition are not mutated in the loop body. This either leads to an infinite or to a never running loop.
  --> $DIR/infinite_loop.rs:79:11
   |
79 |     while i < 3 {
   |           ^^^^^

error: Variable in the condition are not mutated in the loop body. This either leads to an infinite or to a never running loop.
  --> $DIR/infinite_loop.rs:94:11
   |
94 |     while i < 3 {
   |           ^^^^^

error: Variable in the condition are not mutated in the loop body. This either leads to an infinite or to a never running loop.
  --> $DIR/infinite_loop.rs:99:11
   |
99 |     while i < 3 {
   |           ^^^^^

error: Variable in the condition are not mutated in the loop body. This either leads to an infinite or to a never running loop.
   --> $DIR/infinite_loop.rs:162:15
    |
162 |         while self.count < n {
    |               ^^^^^^^^^^^^^^

error: aborting due to 9 previous errors

